force-app/main/default/objects/FriendlyCaptchaConfig__mdt/FriendlyCaptchaConfig__mdt.object-meta.xml
<CustomObject>
	<label>FriendlyCaptchaConfig</label>
	<pluralLabel>FriendlyCaptchaConfig</pluralLabel>
</CustomObject>