force-app/main/default/objects/FriendlyCaptchaConfig__mdt/fields/APIEndpoint__c.field-meta.xml
<CustomField>
    <fullName>APIEndpoint__c</fullName>
    <defaultValue>&quot;global&quot;</defaultValue>
    <description>The endpoint URL used for communicating with the Friendly Captcha API. Shorthands &apos;eu&apos; or &apos;global&apos; are accepted. Default is &apos;global&apos;. Using the &apos;eu&apos; endpoint requires access that must be enabled in the Friendly Captcha dashboard.</description>
    <label>APIEndpoint</label>
    <length>100</length>
    <type>Text</type>
</CustomField>