force-app/main/default/objects/FriendlyCaptchaConfig__mdt/fields/Sitekey__c.field-meta.xml
<CustomField>
    <fullName>Sitekey__c</fullName>
    <description>A Friendly Captcha sitekey associated with an application. Copied from the application configuration in the Friendly Captcha dashboard.</description>
    <label>Sitekey</label>
    <length>16</length>
    <type>Text</type>
</CustomField>