force-app/main/default/objects/FriendlyCaptchaConfig__mdt/fields/StartMode__c.field-meta.xml
<CustomField>
	<fullName>StartMode__c</fullName>
	<description>The start mode determines the behavior around automatic activation of the widget. Activation here means the challenge gets requested and gets solved. 'auto' means the widget gets activated as soon as it is created. 'focus' means the widget gets activated as soon as the form above it is focused. 'none' means the widget does not start automatically at all; the user needs to press the widget. Defaults to 'focus'.</description>
	<label>StartMode</label>
	<length>100</length>
	<type>Text</type>
</CustomField>