force-app/main/default/objects/FriendlyCaptchaConfig__mdt/fields/Theme__c.field-meta.xml
<CustomField>
	<fullName>Theme__c</fullName>
	<description>The theme for the widget. 'light' is a light theme with a white background. 'dark' is a dark theme with a dark background. 'auto' means the theme is automatically chosen based on the user's system preferences. Defaults to 'light'.</description>
	<label>Theme</label>
	<length>100</length>
	<type>Text</type>
</CustomField>